[gd_scene load_steps=4 format=3 uid="uid://bhlgvkm74pcib"]

[ext_resource type="Texture2D" uid="uid://bvuth8au5q8n4" path="res://icon.svg" id="1_ej2wj"]
[ext_resource type="Script" uid="uid://bc2wnshpr3w1w" path="res://Units/Scripts/attacker_unit.gd" id="1_l228c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ej2wj"]
radius = 26.0

[node name="AttackerUnit" type="Node2D"]
script = ExtResource("1_l228c")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.35, 0.35)
texture = ExtResource("1_ej2wj")

[node name="HitBox" type="Area2D" parent="." groups=["Unit"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_ej2wj")
debug_color = Color(0.956995, 0.209014, 1.92523e-07, 0.42)

[node name="AttackTimer" type="Timer" parent="."]

[node name="HealthLabel" type="Label" parent="."]
offset_left = -16.0
offset_top = 27.0
offset_right = 24.0
offset_bottom = 50.0

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_hit_box_area_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
